--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,12 @@
         }
     ],
     "require": {
-        "php-ffmpeg/php-ffmpeg": "^0.11.0"
+        "php-ffmpeg/php-ffmpeg": "^0.14.0"
+    },
+    "require-dev": {
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "^4.0",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
