--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,28 @@
 language: php
 
+os:
+  - linux
+
+sudo: required
+
+dist: trusty
+
+before_install:
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:mc3man/trusty-media; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -y ffmpeg; fi
+  - ffmpeg -hwaccels
+
 php:
   - 7.0
   - 7.1
   - 7.2
+
 env:
   - LARAVEL_VERSION=5.7.*
   - LARAVEL_VERSION=5.8.*
   - LARAVEL_VERSION=6.*.*
+
 matrix:
   fast_finish: true
 
@@ -16,5 +31,6 @@ before_script:
   - travis_retry composer install --prefer-source --no-interaction
   - if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "laravel/laravel:${LARAVEL_VERSION}" --no-update; fi;
   - composer update
+
 script:
   - phpunit
