--- a/composer.json
+++ b/composer.json
@@ -2,24 +2,20 @@
     "name": "pawlox/video-thumbnail",
     "description": "Video thumbnails",
     "keywords": [
-        "Video Thumbnails", "Laravel video thumbnail", "Laravel 5"
+        "Video Thumbnails", "Laravel video thumbnail", "Laravel"
     ],
     "license": "MIT",
     "authors": [
-        {
-            "name": "Sukhil S S",
-            "email": "emailtosukhil@gmail.com"
-        },
         {
             "name": "Paweł Marciniak",
             "email": "pawmarci@gmail.com"
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.0",
         "ext-gd": "*",
-        "illuminate/support": "^7.0|^8.0",
-        "php-ffmpeg/php-ffmpeg": "^0.19.0"
+        "illuminate/support": "^9.0",
+        "php-ffmpeg/php-ffmpeg": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,7 +29,7 @@
     },
     "minimum-stability": "dev",
     "require-dev": {
-        "orchestra/testbench": "~6.0",
-        "phpunit/phpunit": "^8"
+        "orchestra/testbench": "~7.0",
+        "phpunit/phpunit": "^9"
     }
 }
