--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "require": {
         "php": ">=8.0",
         "ext-gd": "*",
-        "illuminate/support": "^10.0|^11",
-        "php-ffmpeg/php-ffmpeg": "^1.1.0"
+        "illuminate/support": "^10.0|^11"^12",
+        "php-ffmpeg/php-ffmpeg": "^1.3.1"
     },
     "autoload": {
         "psr-4": {
