--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=8.0",
         "ext-gd": "*",
-        "illuminate/support": "^10.0|^11"^12",
+        "illuminate/support": "^10.0|^11|^12",
         "php-ffmpeg/php-ffmpeg": "^1.3.1"
     },
     "autoload": {
